// The Firmament project
// Copyright (c) The Firmament Authors.
//
// Job descriptor protobuf.

syntax = "proto3";

package firmament;

import "base/task_desc.proto";

message JobDescriptor {
  enum JobState {
    NEW = 0;
    CREATED = 1;
    RUNNING = 2;
    COMPLETED = 3;
    FAILED = 4;
    ABORTED = 5;
    UNKNOWN = 6;
  }

  string uuid = 1;
  string name = 2;
  JobState state = 3;
  TaskDescriptor root_task = 4;
  repeated bytes output_ids = 5;
  // For gang scheduling jobs.
  uint64 min_number_of_tasks = 6;
  uint64 scheduled_tasks_count = 7;
  bool is_gang_scheduling_job = 8;
  string pod_group_name = 9;
}

